bugfix: fix logo scaling on small displays

--- a/src/app/titlebar/titlebar.component.scss
+++ b/src/app/titlebar/titlebar.component.scss
@@ -2,7 +2,7 @@
 @use "../../themes" as themes;
 
 .app-titlebar-logo-area {
-  width: 3.5rem;
+  flex: 0 0 3.5rem;
   height: inherit;
   text-align: center;
   border-radius: 0 math.div(5rem, 16) math.div(5rem, 16) 0;
